Fixing wishlist alignment.

--- a/src/App.css
+++ b/src/App.css
@@ -255,9 +255,8 @@ a {
   display: flex;
 }
 
-.collection-container {
+#collection-container {
   display: flex;
-  flex-grow: inherit;
   justify-content: space-around;
   margin-top: 60px;
 }
@@ -558,7 +557,7 @@ a {
   color: red;
 }
 
-#wishlist-header {
+.wishlist-header {
   text-align: center;
   margin-top: 40px;
   margin-bottom: 40px;
